@@ -1,5 +1,6 @@
 2001-08-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* gamewin.cc: fixed Gwenno bug. (also accept NPCnums < 0x80 for bodies)
+	* contain.cc: fixed infinite-volume containers (eg. hollow tree)
 
 2001-08-20  Max Horn <max@quendi.de>
 	* exult.cc: disabled mouse clicks during dont_move mode
